src/test/ui/rfc-2361-dbg-macro/dbg-macro-move-semantics.stderr
error[E0382]: use of moved value: `a`
  --> $DIR/dbg-macro-move-semantics.rs:9:18
   |
LL |     let a = NoCopy(0);
   |         - move occurs because `a` has type `NoCopy`, which does not implement the `Copy` trait
LL |     let _ = dbg!(a);
   |             ------- value moved here
LL |     let _ = dbg!(a);
   |                  ^ value used here after move
   |
help: borrow this binding in the pattern to avoid moving the value
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
LL |             ref tmp => {
   |             +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
